[gd_scene load_steps=8 format=2]

[ext_resource path="res://Biblioteca/sala de aula fundo.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/SalaEC.gd" type="Script" id=2]
[ext_resource path="res://Biblioteca/BotaoCarreira.png" type="Texture" id=3]
[ext_resource path="res://Biblioteca/BotaoUniversidade.png" type="Texture" id=4]
[ext_resource path="res://Biblioteca/BotaoÁreaDeTrabalho.png" type="Texture" id=5]
[ext_resource path="res://Biblioteca/BotaoInstagram.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Interface/Menu/BotãoX.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
position = Vector2( -173, -138 )
scale = Vector2( 2.59487, 2.26494 )
script = ExtResource( 2 )

[node name="SalaDeAulaFundo" type="Sprite" parent="."]
position = Vector2( 438, 302 )
scale = Vector2( 1.598, 1.374 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 0.796078, 0.937255, 1 )
margin_left = 329.0
margin_top = 145.0
margin_right = 802.0
margin_bottom = 371.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 402.0
margin_top = 324.0
margin_right = 750.0
margin_bottom = 365.0
text = "https://instagram.com/juliallabs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCarreiraEC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 402.0
margin_top = 156.0
margin_right = 712.0
margin_bottom = 191.0
text = "https://www.guiadacarreira.com.br/guia-das-profissoes/engenharia-computacao/ "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUnivEC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 403.0
margin_top = 212.0
margin_right = 722.0
margin_bottom = 251.0
text = "https://www.inteli.edu.br/engenharia-da-computacao/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAreatrabEC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 405.0
margin_top = 267.0
margin_right = 723.0
margin_bottom = 307.0
text = "https://www.youtube.com/watch?v=1W5YrYFl_zE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoCarreira" type="Sprite" parent="."]
position = Vector2( 562, 175 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 3 )

[node name="BotaoInstagram" type="Sprite" parent="."]
position = Vector2( 570, 353 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 6 )

[node name="BotaoUniversidade" type="Sprite" parent="."]
position = Vector2( 565, 193 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 4 )

[node name="BotaoáreaDeTrabalho" type="Sprite" parent="."]
position = Vector2( 568, 298 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 5 )

[node name="ButtonVoltarEC" type="Button" parent="."]
margin_left = 756.0
margin_top = 100.0
margin_right = 795.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fecharbotao-removebg-preview" type="Sprite" parent="."]
position = Vector2( 776.147, 113.91 )
scale = Vector2( 0.0878725, 0.0721352 )
texture = ExtResource( 7 )

[connection signal="pressed" from="ButtonEC" to="." method="_on_ButtonEC_pressed"]
[connection signal="pressed" from="ButtonCarreiraEC" to="." method="_on_ButtonCarreiraEC_pressed"]
[connection signal="pressed" from="ButtonUnivEC" to="." method="_on_ButtonUnivEC_pressed"]
[connection signal="pressed" from="ButtonAreatrabEC" to="." method="_on_ButtonAreatrabEC_pressed"]
[connection signal="pressed" from="ButtonVoltarEC" to="." method="_on_ButtonVoltarEC_pressed"]
